# setscraper

./: .gitignore  .tool-versions  README.md  main.py  package-lock.json  package.json  pyproject.toml  scrape.py
components/: chart.tsx
pages/: index.tsx
