[tool.poetry]
name = "setscraper"
version = "0.1.0"
description = ""
authors = ["Jeep Kiddee <nutthawut.ki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
tqdm = "^4.59.0"
requests = "^2.25.1"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
