[tool.poetry]
name = "setscraper"
version = "0.1.0"
description = ""
authors = ["Jeep Kiddee <nutthawut.ki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.59.0"
requests = "^2.25.1"
pandas = "^1.4.3"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
