[tool.poetry]
name = "setscraper"
version = "0.1.0"
description = ""
authors = ["Jeep Kiddee <nutthawut.ki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.1"
requests = "^2.25.1"
pandas = "^1.4.3"
lxml = "^4.9.1"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
notebook = "^6.4.12"
yapf = "^0.32.0"
autopep8 = "^1.7.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
